kube-config/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: short-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      components: web
  template:
    metadata:
      labels:
        components: web
    spec:
      containers:
      - name: short-app
        image: antonlarichev/short-app
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 80
