kube-config/pod_image_dz.yml
apiVersion: v1
kind: Pod
metadata:
  name: image-app
  labels:
    components: web_image
spec:
  containers:
  - name: image-app
    image: antonlarichev/conv-app:1.0
    resources:
      limits:
        memory: "128Mi"
        cpu: "250m"
    ports:
      - containerPort: 81
