kube-config/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: short-app-clusterip
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
  selector:
    components: web_image
