kube-config/node_port_image.yml
apiVersion: v1
kind: Service
metadata: 
  name: image-app-port
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80

  selector:
    components: web_image
